src/objects/PaymentAllocation__c.object
<CustomObject>
    <fields>
        <fullName>BillItemsCreditItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill Items/Credit Item</label>
        <referenceTo>BillItem__c</referenceTo>
        <relationshipLabel>Payment Allocations</relationshipLabel>
        <relationshipName>PaymentAllocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DebtRecoveryStage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Debt Recovery Stage</label>
        <referenceTo>DebtRecoveryStage__c</referenceTo>
        <relationshipLabel>Payment Allocations</relationshipLabel>
        <relationshipName>PaymentAllocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Installment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installment</label>
        <referenceTo>Instalment__c</referenceTo>
        <relationshipLabel>Payment Allocations</relationshipLabel>
        <relationshipName>PaymentAllocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentRefund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment/Refund</label>
        <referenceTo>PaymentRefund__c</referenceTo>
        <relationshipLabel>Payment Allocations</relationshipLabel>
        <relationshipName>PaymentAllocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Payment Allocation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payment Allocation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>